<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ghost_app_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="50px"
            android:paddingTop="150px"
            android:paddingRight="50px">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/edit_text_password"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/edit_text_phone"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50px"
            android:paddingTop="70px"
            android:paddingRight="50px">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_register"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorText" />
            <Button
                android:id="@+id/btn_reset_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="Forgot password?"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="Not a member? Register here."
                android:textAllCaps="false"
                android:textColor="@color/colorwhite"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
       />

</RelativeLayout>
